--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,3 +1,44 @@
 doctype html
 head
-    link(rel="stylesheet", href="../style/main.css")
+  meta(charset='utf-8')
+  title Wapic
+  meta(name='viewport', content='initial-scale=1')
+  link(rel='stylesheet', href='styles/main.css')
+section.header
+  .container.header__content
+    .header__left
+        .header__company-name Wapic
+    .header__phone-number
+        span.header__phone-icon
+        |+62 202 555 0117
+    .header__right
+        .header__navigation.navigation
+        ul.navigation
+            li.navigation__item
+                a(href='') Home
+            li.navigation__item
+                a(href='') About us
+            li.navigation__item
+                a(href='') Pricing
+            li.navigation__item
+                a(href='') Contact us
+    button.header__get-started-button(name='Get started',value='Get started') Get started
+section.masthead
+section.features
+    .container.features__content
+        .section__heading
+            .section__title Best of our features
+            .section__underline
+            .section__description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+section.banner
+    .container.banner__content
+section.testimonials
+    .container.testimonials__content
+section.map
+    .container.map__content
+section.pricing
+    .container.pricing__content
+section.call-to-action
+    .container.call-to-action__content
+section.footer
+    .container.footer__content
