--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,28 +1,37 @@
 @font-face {
-	font-family: 'ProximaNova';
+	font-family: 'ProximaNovaBold';
 	src: url('../fonts/ProximaNova/ProximaNova-Bold.#iefix') format('embedded-opentype'),
-	url('../fonts/ProximaNova/ProximaNova-Bold.eot') format('eot'),
-    url('../fonts/ProximaNova/ProximaNova-Bold.woff') format('woff'),
-    url('../fonts/ProximaNova/ProximaNova-Bold.ttf') format('ttf'),
-	url('../fonts/ProximaNova/ProximaNova-Bold.svg') format('svg');
+	url('../fonts/ProximaNova/ProximaNovaBold.eot') format('eot'),
+    url('../fonts/ProximaNova/ProximaNovaBold.woff') format('woff'),
+    url('../fonts/ProximaNova/ProximaNovaBold.ttf') format('ttf'),
+	url('../fonts/ProximaNova/ProximaNovaBold.svg') format('svg');
 }
 @font-face {
 	font-family: 'RobotoRegular';
-	src: url('../fonts/Roboto/Roboto-Regular.ttf');
+	src: url('../fonts/Roboto/RobotoRegular.ttf');
 }
 @font-face {
 	font-family: 'RobotoLight';
-	src: url('../fonts/Roboto/Roboto-Light.ttf');
+	src: url('../fonts/Roboto/RobotoLight.ttf');
 }
 @font-face {
 	font-family: 'RobotoBold';
-	src: url('../fonts/Roboto/Roboto-Bold.ttf');
+	src: url('../fonts/Roboto/RobotoBold.ttf');
 }
 @font-face {
 	font-family: 'Montserrat';
-	src: url('../fonts/Montserrat/Montserrat-Regular.ttf');
+	src: url('../fonts/Montserrat/MontserratRegular.ttf');
 }
 @font-face {
 	font-family: 'Merriweather';
-	src: url('../fonts/Merriweather/Merriweather-Light.ttf');
+	src: url('../fonts/Merriweather/MerriweatherLight.ttf');
 }
+
+@font-face {
+	font-family: 'Icons';
+	src:url('/fonts/Icons/icons.woff') format('woff'),
+		url('/fonts/Icons/icons.ttf') format('ttf'),
+		url('/fonts/Icons/icons.eot') format('eot'),
+		url('/fonts/Icons/icons.svg') format('svg'); 
+   }
+
