--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,27 +8,100 @@ body{
 .container{
     max-width: 1056px;
     margin: 0 auto;
+    border-left: 1px solid #000;
+    border-right: 1px solid #000;
+    box-sizing: border-box;
+}
+
+.link{
+    color: inherit;
+    text-decoration: none;
+}
+
+.button:focus{
+    outline: none;
 }
 
 .header{
+    background: linear-gradient(180deg, rgba(128, 128, 128, 0.8), transparent);
+    position: fixed;
+    width: 100%;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     &__content{
         display: flex;
         justify-content: space-between;
+        color: #fff;
     }
-
+    &__left{
+        display: flex;
+        align-items: center;
+        padding: 32px 0;
+    }
+    &__right{
+        display: flex;
+        align-items: center;
+        padding: 32px 0;
+    }
     &__company-name{
-        font-size: 13px;
+        font-size: 20px;
         font-family: "ProximaNova";
-        color: #000;
         font-weight: bold;
         text-transform: uppercase;
         line-height: 1.615;
+        padding: 0;
+        margin-right: 25px;
     }
     &__phone-number{
-    
+        font-size: 13px;
+        font-family: "Montserrat";
+        color:#fff;
+        text-transform: uppercase;
+        line-height: 1.615;
+        padding-left: 25px;
+        border-left: 1px solid rgba(255, 255, 255, 0.2);          
     }
     &__phone-icon{
-    
+        font-family: 'Icons';
+        font-size: 13px;
+    }
+    .navigation{
+        list-style-type: none;
+        padding: 0;
+        &__item{
+            display: inline;
+            font-size: 13px;
+            font-family: "Montserrat";
+            color: rgba(255, 255, 255, 0.702);
+            text-transform: uppercase;
+            line-height: 1.615;
+            margin-right: 30px;
+        }
+        &__item:hover{
+            color: #fff;
+        }
+    }
+    &__get-started-button{
+        font-size: 12px;
+        font-family: "Montserrat";
+        color: #fff;
+        text-transform: uppercase;
+        text-align: center;
+        border: none;
+        border-radius: 2px;
+        background-color: rgba(255, 255, 255, 0.35);
+        padding: 11px 13px;
+        cursor: pointer;
+    }
+}
+
+.masthead{
+    height: 500px;
+    background-image: url("../images/masthead-bg.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: rgba(15,95,92,0.5);
+    &__content{
+        
     }
 }
 
@@ -55,8 +128,54 @@ body{
     margin: 0 auto;
 }
 
-.features{
+.our-features{
     &__content{
         padding: 100px 0 130px;
+    }
+    .best-features{
+        display: flex;
+        justify-content: space-between;
+        margin: 75px 0 35px;
+        &__feature{
+            width: 31%;
+        }
+        &__header{
+            font-size: 16px;
+            font-family: "RobotoRegular";
+            color: rgb(15, 95, 92);
+            line-height: 1.25;
+            text-align: center; 
+        }
+        &__description{
+            font-size: 14px;
+            font-family: "RobotoRegular";
+            color: rgb(131, 167, 165);
+            line-height: 1.571;
+            text-align: center;
+        }
+    }
+    .other-features{
+        display: flex;
+        justify-content: space-between;
+        &__feature{
+            width: 100%;
+        }
+        &__heading{
+            display: flex;
+        }
+        &__header{
+            font-size: 16px;
+            font-family: "RobotoRegular";
+            color: rgb(15, 95, 92);
+            line-height: 1.25;
+            text-align: center; 
+        }
+        &__description{
+            font-size: 14px;
+            font-family: "RobotoRegular";
+            color: rgb(131, 167, 165);
+            line-height: 1.571;
+            text-align: center;
+        }
     }
 }
