--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -73,6 +73,41 @@ section.map
     .container.map__content
 section.pricing
     .container.pricing__content
+        .section__heading
+            .section__title Pricing &amp; Plan
+            .section__underline
+            .section__description Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. Donec id elit non mi porta gravida at eget metus.
+        .pricing__plans
+            .pricing__plan.plan
+                .plan__header Basic
+                .plan__price $199
+                .plan__duration /month
+                .plan__options
+                    .plan__option Justo Fringilla
+                    .plan__option Mollis Sit Nullam
+                    .plan__option Ultricies Purus Amet
+                    .plan__option Cras Inceptos
+                button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
+            .pricing__plan.plan
+                .plan__header Basic
+                .plan__price $199
+                .plan__duration /month
+                .plan__options
+                    .plan__option Justo Fringilla
+                    .plan__option Mollis Sit Nullam
+                    .plan__option Ultricies Purus Amet
+                    .plan__option Cras Inceptos
+                button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
+            .pricing__plan.plan
+                .plan__header Basic
+                .plan__price $199
+                .plan__duration /month
+                .plan__options
+                    .plan__option Justo Fringilla
+                    .plan__option Mollis Sit Nullam
+                    .plan__option Ultricies Purus Amet
+                    .plan__option Cras Inceptos
+                button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
 section.call-to-action
     .container.call-to-action__content
 section.footer
