--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -25,6 +25,10 @@ section.header
         button.header__get-started-button.button(name='Get started',value='Get started') Get started
 section.masthead
     .container.masthead__content
+        .masthead__caption
+            .masthead__header Welcome to Wapik
+            .masthead__description Wapik is multipurpose template, with modern and smart design. Wapik is perfect template for you!
+            a.masthead__learn-more-button.link(href="") Learn More
 section.our-features
     .container.our-features__content
         .section__heading
@@ -65,12 +69,33 @@ section.our-features
                     .other-features__icon
                     .other-features__header Free Forever and Ever
                 .other-features__description Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus.
-section.banner
-    .container.banner__content
+section.presentation
+    .container.presentation__content
+        .section__heading
+            .section__title Looking for the perfect template to use?
+            .section__underline
+            .section__description.section-description-presentation Donec id elit non mi porta gravida at eget metus.
+        .presentation__body
+            .presentation__phone
+            
+            .presentation__caption
+                .presentation__header Responsive Ready
+                .presentation__description Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper.
+                .presentation__item Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
+                .presentation__item Donec id elit non mi porta gravida at eget metus.
 section.testimonials
     .container.testimonials__content
+        .testimonials__testimonial.testimonial
+            .testimonial__description This theme is beautiful, elegant and easy to customize. I’ve been able to build an amazing site in just a minute. Thank you very much for creating this impressive template!
+            .testimonial__author Valeria Boltneva
+            .testimonial__position Director of Acme.Inc
+
+        .testimonials__photo
 section.map
     .container.map__content
+        .map__caption
+            .map__header Built with High Attention to Details
+            .map__description Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper. Integer posuere erat a ante venenatis dapibus 
 section.pricing
     .container.pricing__content
         .section__heading
@@ -108,7 +133,62 @@ section.pricing
                     .plan__option Ultricies Purus Amet
                     .plan__option Cras Inceptos
                 button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
+        .pricing__addons.addons
+            .section__heading
+                .section__title.addons__title Included with all Plans
+                .section__underline.addons__underline
+            .addons__description
+                .addons__item Maecenas faucibus mollis interdum
+                .addons__item Vestibulum id ligula porta felis euismod
+                .addons__item Nulla vitae elit libero, a pharetra augue
+                .addons__item Cras justo odio, dapibus ac facilisis
+                .addons__item Duis mollis, est non commodo luctus
+                .addons__item Curabitur blandit tempus porttitor
+                .addons__item Fringilla Mattis
+                .addons__item Integer posuere
+                .addons__item Nullam quis risus eget urna mollis 
+section.contact-us
+    .container.contact-us__content
+        .section__heading.contact-us__heading
+            a.section__title.contact-us__title.link(href="contact-us.html") Need Help?
+            .section__underline
+            .section__description Contact our Customer Support that is always ready to help you with any possible questions, problems or information.
+            a.contact-us__email.link(href="mailto:support@wapik.com") support@wapik.com
 section.call-to-action
     .container.call-to-action__content
+        .call-to-action__caption
+            .call-to-action__header Do You Like Wapik? Download it Now
+            .call-to-action__description Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.
+        a.call-to-action__download-button.link(href="", alt="") download now! - FREE forever
 section.footer
     .container.footer__content
+        .footer__column.column
+            .column__header Wapik
+            .column__data-row @: hi@wapik.com
+            .column__data-row p: +62 202 555 0117
+            .column__data-row a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
+        .footer__column.column
+            .column__header Company
+            .column__data-row
+                a.link(href="") Home
+            .column__data-row
+                a.link(href="") About Us
+            .column__data-row
+                a.link(href="") Pricing
+            .column__data-row
+                a.link(href="") Contact Us
+        .footer__column.column
+            .column__header Others
+            .column__data-row
+                a.link(href="") Help &amp; Support
+            .column__data-row
+                a.link(href="") Privacy Policy
+            .column__data-row
+                a.link(href="") Terms
+            .column__data-row
+                a.link(href="") Sitemap
+        .footer__column.column
+            .column__newsletter Newsletter
+            .column__data-row Subscribe to our newsletter and get all the cool news
+            .column__email-field
+                input(type="email", placeholder="Enter Email")
