--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,22 @@
 @import 'fonts';
-
+@mixin flex($justify-content){
+    display: flex;
+    justify-content: $justify-content;
+}
+$header-gradient-color: rgba(128, 128, 128, 0.8);
+$whitesmoke-color: #eef1ec;
+$lightblue-color: #c1d3d2;
+$aquamarine-color:  #83a7a5;
+$lightgreen-color: rgb(111, 176, 72);
+$dark-teal-color:  #0f5f5c;
+$section-description-color: $aquamarine-color;
+$testimonial-description-color: $aquamarine-color;
+$testimonial-position-font-color: $aquamarine-color;
+$learn-more-button-bg-color: $lightgreen-color;
+$testimonial-author-font-color: $lightgreen-color;
+$best-features-icon-color: $lightgreen-color;
+$section-underline-color: $lightgreen-color;
+$section-title-color: $dark-teal-color;
 body{
     margin: 0;
     padding: 0;
@@ -8,9 +25,6 @@ body{
 .container{
     max-width: 1056px;
     margin: 0 auto;
-    border-left: 1px solid #000;
-    border-right: 1px solid #000;
-    box-sizing: border-box;
 }
 
 .link{
@@ -23,14 +37,14 @@ body{
 }
 
 .header{
-    background: linear-gradient(180deg, rgba(128, 128, 128, 0.8), transparent);
+    background: linear-gradient(180deg, $header-gradient-color, transparent);
     position: fixed;
     width: 100%;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    font-weight: bold;
     &__content{
-        display: flex;
-        justify-content: space-between;
+        @include flex(space-between);
         color: #fff;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     }
     &__left{
         display: flex;
@@ -95,24 +109,54 @@ body{
 }
 
 .masthead{
-    height: 660px;
-    background-color: rgba(15,95,92,0.5);
-    background-image: url("../images/masthead-bg.png");
+    background: url("../images/masthead-bg.png") no-repeat;
+    box-shadow: inset 0 0 0 1000px rgba(15,95,92,0.8);
     background-size: cover;
     /* &__content{
         
     } */
+    &__caption{
+        padding: 300px 0 200px;
+        width: 48%;
+    }
+    &__header{
+        font-size: 38px;
+        font-family: "RobotoRegular";
+        color: rgb(255, 255, 255);
+        line-height: 1;
+    }
+    &__description{
+        font-size: 16px;
+        font-family: "RobotoRegular";
+        color: rgb(255, 255, 255);
+        line-height: 1.5;
+        margin: 20px 0;
+    }
+    &__learn-more-button{
+        display: inline-block;
+        font-size: 14px;
+        font-family: "Montserrat";
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        font-weight: bold;
+        text-align: center;
+        border-radius: 2px;
+        border: 0;
+        background-color: rgb(111, 176, 72);
+        padding: 20px 45px;
+        cursor: pointer;
+    }
 }
 .section__title{
     font-size: 32px;
     font-family: "RobotoLight";
-    color: rgb(15, 95, 92);
+    color: $section-title-color;
     text-align: center;
     line-height: 1;
 }
 
 .section__underline{
-    border-bottom: 1px solid rgb(111, 176, 72);
+    border-bottom: 1px solid $section-underline-color;
     width: 65px;
     height: 1px;
     margin: 22px auto;
@@ -121,11 +165,90 @@ body{
 .section__description{
     font-size: 15px;
     font-family: "RobotoRegular";
-    color: rgb(131, 167, 165);
+    color: $section-description-color;
     text-align: center;
     width: 50%;
     margin: 0 auto;
     margin-bottom: 43px;
+}
+
+.presentation{
+    box-sizing: border-box;
+    background-color: #eef1ec;
+    .section-description-presentation{
+        margin-bottom: 0;
+    }
+    &__content{
+        padding-top: 75px;
+    }
+    &__body{
+        @include flex(space-between);
+    }
+    &__phone{
+        background-image: url(../images/hand.png);
+        background-repeat: no-repeat;
+        background-position: -100px calc(100% + 140px);
+        width: 40%;
+    }
+    &__caption{
+        padding: 150px 0 130px;
+        width: 46.5%;
+    }
+    &__header{
+        font-size: 32px;
+        font-family: "RobotoLight";
+        color: rgb(15, 95, 92);
+    }
+    &__description{
+        padding: 15px 0;
+        font-size: 14px;
+        font-family: "RobotoRegular";
+        color: rgb(131, 167, 165);
+        line-height: 1.571;
+    }
+    &__item{
+        font-size: 14px;
+        font-family: "RobotoRegular";
+        color: rgb(131, 167, 165);
+        line-height: 2.714;
+    }
+}
+
+.testimonials{
+    &__content{
+        padding: 140px 0;
+        @include flex(space-between);
+        align-items: center;
+    }
+    .testimonial{
+        width: 48%;
+        &__description{
+            font-size: 22px;
+            font-family: "MerriweatherLight";
+            color: $testimonial-description-color;
+            line-height: 1.818;
+            margin-bottom: 35px;
+        }
+        &__author{
+            font-size: 14px;
+            font-family: "RobotoMedium";
+            color: $testimonial-author-font-color;
+            line-height: 1.571;
+        }
+        &__position{
+            font-size: 14px;
+            font-family: "RobotoRegular";
+            line-height: 1.571;
+            color: $testimonial-position-font-color;
+        }
+    }
+    &__photo{
+        flex-basis: 400px;
+        height: 400px;
+        border-radius: 50%;
+        background-image: url(../images/testimonial-author.png);
+        background-position: center;
+    }
 }
 
 .our-features{
@@ -133,8 +256,7 @@ body{
         padding: 100px 0 130px;
     }
     .best-features{
-        display: flex;
-        justify-content: space-between;
+        @include flex(space-between);
         margin: 75px 0 35px;
         &__feature{
             width: 31%;
@@ -155,8 +277,7 @@ body{
         }
     }
     .other-features{
-        display: flex;
-        justify-content: space-between;
+        @include flex(space-between);
         flex-wrap: wrap;
         &__feature{
             width: 47%;
@@ -185,13 +306,37 @@ body{
     }
 }
 
+.map{
+    background-image: url(../images/map.png);
+    background-position: calc(50% + 390px) center;
+    background-repeat: no-repeat;   
+    background-color: rgb(238, 241, 236);
+    &__content{
+        @include flex(flex-start);
+    }
+    &__caption{
+        padding: 170px 0 180px;
+        width: 50%;
+    }
+    &__header{
+        font-size: 32px;
+        font-family: "RobotoLight";
+        color: rgb(15, 95, 92);
+    }
+    &__description{
+        font-size: 14px;
+        font-family: "RobotoRegular";
+        color: rgb(131, 167, 165);
+        line-height: 1.714;          
+    }
+}
+
 .pricing{
     &__content{
-        padding: 100px 0 60px;
+        padding: 100px 0 80px;
     }
     &__plans{
-        display: flex;
-        justify-content: center;
+        @include flex(center);
     }
     .plan{
         padding: 30px 58px;
@@ -240,6 +385,120 @@ body{
         }
         &__select-button:hover{
             background-color: rgb(111, 176, 72);
+        }
+    }
+    .addons{
+        margin-top: 80px;
+        &__title{
+            font-size: 22px;
+            font-family: "Robotolight";
+            color: rgb(15, 95, 92);
+            text-align: center;
+            font-weight: bold;
+        }
+        &__underline{
+    
+        }
+        &__description{
+            @include flex(space-between);
+            flex-wrap: wrap;
+        }
+        &__item{
+            width: 30%;
+            font-size: 14px;
+            font-family: "RobotoRegular";
+            color: rgb(131, 167, 165);
+            line-height: 2.571;
+        }
+        &__item::before{
+            content: "\f122";
+            border-radius: 50%;
+            border: 1px solid rgb(131, 167, 165);
+            font-family: 'Icons';
+            margin-right: 10px;
+            padding: 7px;
+        }
+    }
+}
+
+.contact-us{
+    &__heading:hover &__title{
+        color: #6fb048;
+    }
+    &__title{
+        display: block;
+        margin: 0 auto;
+        width: 25%;
+    }
+    &__content{
+        padding-bottom: 100px;
+        font-weight: bold;
+    }
+    &__email{
+        display: block;
+        font-size: 18px;
+        font-family: "RobotoRegular";
+        color: rgb(15, 95, 92);
+        line-height: 1.111;
+        text-align: center;
+    }
+}
+
+.call-to-action{
+    background-image: url(../images/call-to-action-bg.png);
+    box-shadow: inset 0 0 0 1000px rgba(238,241,236,0.8);
+    height: 200px;
+    &__content{
+        @include flex(space-between);
+        align-items: center;
+        padding: 80px 0;
+    }
+    &__header{
+        font-size: 28px;
+        font-family: "RobotoLight";
+        color: rgb(15, 95, 92);
+    }
+    &__description{
+        font-family: "RobotoRegular";
+        color: rgb(131, 167, 165);
+        line-height: 1.467;
+    }
+    &__download-button{
+        box-sizing: border-box;
+        display: inline-block;
+        font-size: 13px;
+        font-family: "Montserrat";
+        color: rgb(255, 255, 255);
+        text-transform: uppercase;
+        text-align: center;
+        border-radius: 2px;
+        background-color: rgb(111, 176, 72);
+        padding: 17px 30px;  
+    }
+}
+
+.footer{
+    &__content{
+        @include flex(space-between);
+        padding: 100px 0 60px;
+    }
+    &__column{
+        width: 22%;
+    }
+    .column{
+        &__header{
+            font-size: 13px; 
+            font-family: "RobotoRegular";
+            color: rgb(15, 95, 92);
+            line-height: 1.692;
+            font-weight: bold;
+        }
+        &__data-row{
+            font-size: 13px;
+            font-family: "RobotoRegular";
+            color: rgb(131, 167, 165);
+            line-height: 2.154;
+            font-weight: bold;
         }
     }
 }
