--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,13 +1,13 @@
 doctype html
 head
   meta(charset='utf-8')
-  title Wapic
+  title Wapik
   meta(name='viewport', content='initial-scale=1')
   link(rel='stylesheet', type='text/css', href='styles/main.css')
 section.header
   .container.header__content
     .header__left
-        .header__company-name Wapic
+        .header__company-name Wapik
         .header__phone-number
             span.header__phone-icon &#xf4b8;
             |+62 202 555 0117
@@ -15,13 +15,13 @@ section.header
         .header__navigation.navigation
         ul.navigation
             li.navigation__item
-                a.link(href='') Home
+                a.link(href='index.html') Home
             li.navigation__item
-                a.link(href='') About us
+                a.link(href='about-us.html') About us
             li.navigation__item
-                a.link(href='') Pricing
+                a.link(href='pricing.html') Pricing
             li.navigation__item
-                a.link(href='') Contact us
+                a.link(href='contact-us.html') Contact us
         button.header__get-started-button.button(name='Get started',value='Get started') Get started
 section.masthead
     .container.masthead__content
@@ -76,8 +76,11 @@ section.presentation
             .section__underline
             .section__description.section-description-presentation Donec id elit non mi porta gravida at eget metus.
         .presentation__body
-            .presentation__phone
-            
+            .presentation__phone.phone
+                //
+                    .phone__screen
+                        img(src="images/screen.png", alt="Uphone screen image")
+                .phone__screen
             .presentation__caption
                 .presentation__header Responsive Ready
                 .presentation__description Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper.
@@ -192,3 +195,12 @@ section.footer
             .column__data-row Subscribe to our newsletter and get all the cool news
             .column__email-field
                 input(type="email", placeholder="Enter Email")
+section.copyright
+    .container.copyright__content
+        .copyright__caption All rights reserved 2015.
+        .copyright__socials.socials
+            .socials__item.twitter &#xf242;
+            .socials__item.facebook &#xf230;
+            .socials__item.instagram &#xf350;
+            .socials__item.dribbble &#xf22c;
+            .socials__item.github &#xf4e8;
