--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
     justify-content: $justify-content;
 }
 $header-gradient-color: rgba(128, 128, 128, 0.8);
+$main-bg-color: #fff;
 $whitesmoke-color: #eef1ec;
 $lightblue-color: #c1d3d2;
 $aquamarine-color:  #83a7a5;
@@ -20,6 +21,7 @@ $section-title-color: $dark-teal-color;
 body{
     margin: 0;
     padding: 0;
+    background-color: $main-bg-color;
 }
 
 .container{
@@ -40,7 +42,6 @@ body{
     background: linear-gradient(180deg, $header-gradient-color, transparent);
     position: fixed;
     width: 100%;
-    font-weight: bold;
     &__content{
         @include flex(space-between);
         color: #fff;
@@ -59,12 +60,12 @@ body{
     &__company-name{
         font-size: 20px;
         font-family: "ProximaNova";
-        font-weight: bold;
         text-transform: uppercase;
         line-height: 1.615;
         padding: 0;
         margin-right: 25px;
     }
+    
     &__phone-number{
         font-size: 13px;
         font-family: "Montserrat";
@@ -138,7 +139,6 @@ body{
         font-family: "Montserrat";
         color: rgb(255, 255, 255);
         text-transform: uppercase;
-        font-weight: bold;
         text-align: center;
         border-radius: 2px;
         border: 0;
@@ -184,11 +184,25 @@ body{
     &__body{
         @include flex(space-between);
     }
-    &__phone{
+    .phone{
         background-image: url(../images/hand.png);
         background-repeat: no-repeat;
         background-position: -100px calc(100% + 140px);
         width: 40%;
+        position: relative;
+        /*&__screen{
+            position: absolute;
+            left: 160px;
+            top: 85px; 
+        }*/
+        &__screen{
+            background-image: url(../images/screen.png);
+            width: 179px;
+            height: 315px;
+            position: absolute;
+            left: 160px;
+            top: 85px;
+        }
     }
     &__caption{
         padding: 150px 0 130px;
@@ -342,7 +356,6 @@ body{
         padding: 30px 58px;
         border: 1px solid rgb(193, 211, 210);
         background-color: #fff;
-        font-weight: bold;
         text-align: center;
         &__header{
             font-size: 15px;
@@ -432,7 +445,6 @@ body{
     }
     &__content{
         padding-bottom: 100px;
-        font-weight: bold;
     }
     &__email{
         display: block;
@@ -491,14 +503,65 @@ body{
             font-family: "RobotoRegular";
             color: rgb(15, 95, 92);
             line-height: 1.692;
-            font-weight: bold;
         }
         &__data-row{
             font-size: 13px;
             font-family: "RobotoRegular";
             color: rgb(131, 167, 165);
             line-height: 2.154;
-            font-weight: bold;
+        }
+    }
+}
+.copyright{
+    &__content{
+        @include flex(space-between);
+        border-top: 1px solid rgb(238, 241, 236);
+        padding: 20px 0;
+    }
+    &__caption{
+            font-size: 12px;
+            font-family: "RobotoRegular";
+            color: rgb(131, 167, 165);
+            line-height: 1.5;
+            text-align: left;
+    }
+    .socials{
+        @include flex(space-between); 
+        width: 30%;
+        .twitter{
+            background-color: #55acee;
+            border-radius: 50%;
+            font-size: 16px;
+            font-family: "Icons";
+            padding: 5px;        
+        }
+        .facebook{
+            background-color: #3b5998;
+            border-radius: 50%;
+            font-size: 16px;
+            font-family: "Icons";
+            padding: 5px;           
+        }
+        .instagram{
+            background-color: #3f729b;
+            border-radius: 50%;
+            font-size: 16px;
+            font-family: "Icons";
+            padding: 5px;           
+        }
+        .dribbble{
+            background-color: #ea4c89;
+            border-radius: 50%;
+            font-size: 16px;
+            font-family: "Icons";
+            padding: 5px;           
+        }
+        .githib{
+            background-color: #333333;
+            border-radius: 50%;
+            font-size: 16px;
+            font-family: "Icons";
+            padding: 5px;              
         }
     }
 }
