--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -9,7 +9,7 @@ section.header
     .header__left
         .header__company-name Wapik
         .header__phone-number
-            span.header__phone-icon &#xf4b8;
+            span.header__phone-icon &#xf4b9;
             |+62 202 555 0117
     .header__right
         .header__navigation.navigation
@@ -37,36 +37,36 @@ section.our-features
             .section__description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
         .our-features__best.best-features
             .best-features__feature
-                .best-features__icon 
+                .best-features__icon &#xf14b;
                 .best-features__header Ionicons
                 .best-features__description Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean eu leo quam. Pellentesque ornare sem.
             .best-features__feature
-                .best-features__icon
+                .best-features__icon &#xf430;
                 .best-features__header Creative Design
                 .best-features__description Maecenas faucibus mollis interdum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.
             .best-features__feature
-                .best-features__icon
+                .best-features__icon &#xf3c9;
                 .best-features__header Photoshop and Sketch
                 .best-features__description Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Maecenas sed diam eget risus varius blandit sit amet non magna.
         .our-features__other.other-features
             .other-features__feature
                 .other-features__heading
-                    .other-features__icon
+                    .other-features__icon &#xf4d2;
                     .other-features__header Cross Browser Compatibility
                 .other-features__description Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus.
             .other-features__feature
                 .other-features__heading
-                    .other-features__icon
+                    .other-features__icon &#xf451;
                     .other-features__header Creative Idea
                 .other-features__description Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula porta felis euismod semper.
             .other-features__feature
                 .other-features__heading
-                    .other-features__icon
+                    .other-features__icon &#xf415;
                     .other-features__header Pixel Perfect
                 .other-features__description Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             .other-features__feature
                 .other-features__heading
-                    .other-features__icon
+                    .other-features__icon &#xf407;
                     .other-features__header Free Forever and Ever
                 .other-features__description Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget metus.
 section.presentation
@@ -77,10 +77,8 @@ section.presentation
             .section__description.section-description-presentation Donec id elit non mi porta gravida at eget metus.
         .presentation__body
             .presentation__phone.phone
-                //
-                    .phone__screen
-                        img(src="images/screen.png", alt="Uphone screen image")
                 .phone__screen
+                        img(src="images/screen.png", alt="Uphone screen image")
             .presentation__caption
                 .presentation__header Responsive Ready
                 .presentation__description Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean lacinia bibendum nulla sed consectetur. Maecenas sed diam eget risus varius blandit sit amet non magna. Vestibulum id ligula porta felis euismod semper.
@@ -167,9 +165,10 @@ section.footer
     .container.footer__content
         .footer__column.column
             .column__header Wapik
-            .column__data-row @: hi@wapik.com
+            .column__data-row @: 
+                span.column__email-address hi@wapik.com
             .column__data-row p: +62 202 555 0117
-            .column__data-row a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
+            .column__data-row.address a: 610 Overlook Circle Suite 323 Kalamazoo, MI 49009
         .footer__column.column
             .column__header Company
             .column__data-row
@@ -191,16 +190,22 @@ section.footer
             .column__data-row
                 a.link(href="") Sitemap
         .footer__column.column
-            .column__newsletter Newsletter
-            .column__data-row Subscribe to our newsletter and get all the cool news
-            .column__email-field
-                input(type="email", placeholder="Enter Email")
+            .column__header Newsletter
+            .column__description Subscribe to our newsletter and get all the cool news
+            //- .footer__email-field
+            //-     input.footer__email.link(type="email", placeholder="Enter Email")
+            //-     a.footer__email-submit-button.link(href="") &#xf473;
+
+            form.footer__email-field(action="")
+                input.footer__email.link(type="email", placeholder="Enter Email", id="email")
+                label.footer__email-submit-button
+                    a.link(href="") &#xf473;
 section.copyright
     .container.copyright__content
         .copyright__caption All rights reserved 2015.
         .copyright__socials.socials
-            .socials__item.twitter &#xf242;
-            .socials__item.facebook &#xf230;
-            .socials__item.instagram &#xf350;
+            .socials__item.twitter &#xf243;
+            .socials__item.facebook &#xf231;
+            .socials__item.instagram &#xf351;
             .socials__item.dribbble &#xf22c;
             .socials__item.github &#xf4e8;
