--- a/src/pages/pricing.pug
+++ b/src/pages/pricing.pug
@@ -74,6 +74,14 @@ section.pricing
                 .addons__item Fringilla Mattis
                 .addons__item Integer posuere
                 .addons__item Nullam quis risus eget urna mollis 
+section.contact-us
+    .container.contact-us__content
+        .section__heading.contact-us__heading
+            a.section__title.contact-us__title.link(href="contact-us.html", title="Contact us...") Need Help?
+            //- .section__title.contact-us__title Need Help?
+            .section__underline
+            .section__description Contact our Customer Support that is always ready to help you with any possible questions, problems or information.
+            a.contact-us__email.link(href="mailto:support@wapik.com") support@wapik.com
 section.call-to-action
     .container.call-to-action__content
         .call-to-action__caption
