--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,21 +4,7 @@
 @import 'pricing';
 @import 'flex';
 @import 'masthead-bg';
-$header-gradient-color: rgba(128, 128, 128, 0.8);
-$main-bg-color: #fff;
-$whitesmoke-color: #eef1ec;
-$lightblue-color: #c1d3d2;
-$aquamarine-color:  #83a7a5;
-$lightgreen-color: rgb(111, 176, 72);
-$dark-teal-color:  #0f5f5c;
-$section-description-color: $aquamarine-color;
-$testimonial-description-color: $aquamarine-color;
-$testimonial-position-font-color: $aquamarine-color;
-$learn-more-button-bg-color: $lightgreen-color;
-$testimonial-author-font-color: $lightgreen-color;
-$best-features-icon-color: $lightgreen-color;
-$section-underline-color: $lightgreen-color;
-$section-title-color: $dark-teal-color;
+@import "variables";
 body{
     margin: 0;
     padding: 0;
